<?xml version="1.0"?>
<package format="3">
  <name>uwb_positioning</name>
  <version>0.1.0</version>
  <description>Read-only UWB bridge for DWM1001 CSV -> ROS 2 topics.</description>
  <maintainer email="albin@example.com">albin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
